dpkg (1.16.1) UNRELEASED; urgency=low

  *

 -- Raphaël Hertzog <hertzog@debian.org>  Sat, 02 Apr 2011 09:21:26 +0200

dpkg (1.16.0) unstable; urgency=low

  [ Guillem Jover ]
  * Use DPKG_MAINTSCRIPT_PACKAGE environment variable as package name on
    dpkg-divert when no --package or --local options have been specified.
  * Do not allow versions starting with non-digit when doing strict parsing,
    warn otherwise.
  * Update dpkg(1) to note that --status-fd output does not contain newlines
    in error messages anymore (this was fixed in 1.15.0).
  * Add a new --status-logger option to dpkg, similar to --status-fd but
    instead invoke the command ourselves and feed the status information
    to its standard input. Suggested by Raphaël Hertzog.
  * Add missing space in update-alternative --set-selections output.
  * Add missing options to update-alternative --help output.
  * Count “conffile name is duplicated” for dpkg-deb warning count summary.
  * Improve and clarify strings for translation. Closes: #604914
  * Prefix all fatal error messages with “error: ”.
  * Do not check presence of update-rc.d in the PATH in dpkg, as it's not
    a program needed for dpkg correct operation.
  * Fix dpkg -GEO options on multiple versions of the same packages.
    Closes: #31141
  * Propagate --admindir to programs run from maintainer scritpts.
    Closes: #97076
  * Do not fail when trying to remove the root directory. This will only
    happen either on distributions where dpkg is a foreign package manager,
    or on artificial dpkg databases.
  * Always warn when parsing any package control data which does not have
    an Architecture field except for status and status log files when
    packages are not-installed or half-installed.
  * By default reject installing packages w/o an Architecture field. They
    now need --force-architecture, dpkg will still warn about them though.
  * Fix build failure when passing --disable-nls to configure.