@@ -1,6 +1,8 @@
 dpkg (1.16.1) UNRELEASED; urgency=low
 
-  *
+  [ Raphaël Hertzog ]
+  * Dpkg::Deps: Implement new "reset" method and bump module version to 1.01
+    due to this.
 
  -- Raphaël Hertzog <hertzog@debian.org>  Sat, 02 Apr 2011 09:21:26 +0200
 
